# sti

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_config.h.in  clang_format.sh
dep/: CMakeLists.txt
src/: emboss.h  generator.h  image.h  image_codec_bmp.h  image_codec_jpeg.h  invert.h  kernel.h  main.cpp  memory_view.h  sharpen.h  sobel.h
src/core/: filter.hpp  image.hpp  test_main.cpp
src/core/detail/: codec_bmp_detail.hpp  codec_jpeg_detail.hpp  image_color_detail.hpp  image_detail.hpp  image_resize_detail.hpp  utility_detail.hpp
src/core/filter/: filter.hpp  filter_lowpass.hpp  filter_mean_shift.hpp  filter_range_compression_sse.hpp  filter_threshold_adaptive_bradley.hpp
src/core/kernel/: kernel.hpp
src/core/tests/: stop_watch.h  test_filter.cpp  test_histogram.cpp  test_image.cpp  tests.hpp
sti/: CMakeLists.txt
sti/src/: adaptive.h  canny.h  edge.h  gaussian.h  high_pass.h  histogram.h  image_color.h  image_filter.h  kernel.h  low_pass.h  main.cpp  memory_file.h  sti.h  stop_watch.h
sti/src/core/: filter.hpp  histogram.hpp  image.hpp  test_main.cpp
sti/src/core/detail/: codec_bmp_detail.hpp  codec_jpeg_detail.hpp  image_color_detail.hpp  image_resize_detail.hpp  memory_file.hpp  utility_detail.hpp
sti/src/core/filter/: filter_lowpass.hpp  filter_mean_shift.hpp
sti/src/core/kernel/: kernel.hpp  kernel_lowpass.hpp
sti/src/old/: edge.h  emboss.h  gaussian.h  generator.h  high_pass.h  image.h  image_codec_bmp.h  image_codec_jpeg.h  image_color.h  image_filter.h  low_pass.h  memory_view.h  sharpen.h  sobel.h
sti/src/old/core/: filter.hpp  histogram.hpp  image.hpp  test_main.cpp
sti/src/old/core/detail/: codec_bmp_detail.hpp  codec_jpeg_detail.hpp  image_color_detail.hpp  image_detail.hpp  image_resize_detail.hpp  memory_file.hpp  utility_detail.hpp
sti/src/old/core/filter/: filter.hpp  filter_lowpass.hpp  filter_mean_shift.hpp  filter_range_compression_sse.hpp  filter_threshold_adaptive_bradley.hpp
sti/src/old/core/kernel/: kernel.hpp  kernel_lowpass.hpp
sti/src/old/core/sse/: sse_integer_division_s16.hpp  sse_utilities.hpp
sti/src/sti/: atlas.hpp  color_image.hpp  color_image_info.hpp  generator.hpp  image.hpp  image_detail.hpp  interleaved_image.hpp  interleaved_image_info.hpp  pixel_values.hpp  plane.hpp  plane_modifier.hpp  slice.hpp  utility.hpp
sti/src/sti/codecs/: codec_png.cpp  codec_png.h
sti/src/sti/codecs/detail/: png_read_structs.hpp  png_structs.hpp  png_write_structs.hpp
sti/src/sti/convert/: convert_image.hpp  image.hpp
sti/src/sti/filter/: filter.hpp  filter_lowpass.hpp  filter_mean_shift.hpp  filter_threshold_adaptive_bradley.hpp
sti/src/sti/kernel/: kernel.hpp  kernel_edge.hpp  kernel_emboss.hpp  kernel_gaussian.hpp  kernel_lowpass.hpp  kernel_sharpen.hpp  kernel_sobel.hpp
sti/src/sti/math/: math_constants.hpp
sti/tests/: CMakeLists.txt
sti/tests/test_sti/: load_file_fixture.h  test_atlas.cpp  test_filter.cpp  test_generator.cpp  test_histogram.cpp  test_image.cpp  test_png_codec.cpp  write_file_fixture.h
