message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Google Test                                                                  |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(googletest)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| libAeon                                                                      |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(libaeon/src)
