message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Google Test                                                                  |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(googletest)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Zlib                                                                         |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(zlib)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| PNG                                                                          |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(png)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| libAeon                                                                      |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(libaeon/src)
